main.css
/* ... */
.project-card-inner:hover::after {
  opacity: 1;
}

.project-card-arrow {
  position: absolute;
}

.project-card-inner .project-card-arrow svg {
  width: 5em;
  /* position: absolute; */
  opacity: 0;
  text-align: center;
  transition-delay: 0.1s;
  transition-duration: 1.3s;
  margin: 0 auto;
  /* transform: translateX(-50%); */
  filter: drop-shadow(3px 5px 10px rgba(116, 230, 139, 0.4));
}

.project-card-section a:hover .project-card-arrow svg {
  opacity: 1;
  z-index: 2;
}

.project-main {
  padding: 1.5em;
}

.project-intro,
.project-description,
.bio {
  max-width: 90vw;
  margin: 0 auto;
}

/* .project-main-full .project-intro,
.project-main-full .project-description,
.project-main-full .bio {
  max-width: 50vw;

} */

.bio {
  padding-top: 1em;
}

/* .project-main {
  margin: 0 auto;
  padding: 1.5em;
  max-width: 90vw;
} */
.project-main-display {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  flex-direction: column;
  margin-bottom: 2em;
  max-width: 100vw;
}

.social-link {
  font-weight: 600;
}

.inner-page {
  background-color: #2e7abd;
}

.inner-page nav img {
  padding-top: 2em;
}

.click-view-note {
  position: absolute;
  font-weight: bold;
  background-color: #4c69ec;
  padding: 0.2em 1em 0.2em 1em;
  margin-bottom: 5em;
  max-width: 60vw;
  opacity: 0.8;
}

.back-artworks-link {
  position: fixed;
  right: 0.2em;
  top: 0;
  background-color: #70bf81;
  padding: 0.2em 1em 0.2em 1em;
}

.footer-home {
  display: flex;
  justify-content: center;
  width: 100%;
}

.back-top-link {
  font-weight: 700;
}

.vid-wrapper {
  /* display: flex;
  justify-content: center;
  align-items: center; */
  padding: 56.3% 0 0 0;
  position: relative;
  margin-bottom: 1em;
}

.vid-wrapper iframe {
  /* height: 50vh;
  width: 85vw; */
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

small {
  text-transform: uppercase;
  letter-spacing: calc(var(--base-font-size) * 0.06);
}

hr {
  color: white;
}

.caption {
  font-size: calc(var(--base-font-size)*0.5);
  padding: 0.5em 0 1em 0;
  opacity: 0.6;
  margin-right: 2em;
  max-width: 90vw;
}

.caption.heavy {
  opacity: 1;

}

.rightalign {
  text-align: right;
  width: 100%;
  display: inline-block;
}

.artist-name {
  margin-bottom: -1em;
  font-weight: 500;
  letter-spacing: calc(var(--base-font-size) * 0.05);
  opacity: 0.8;
}

.human-nature-grid,
.cooling-off-grid {
  display: grid;
  gap: 3em;
}

.surface-tension-grid {
  /* gap: 3em; */
}

.surface-tension-item img {
  max-width: 100%;
}

@media screen and (min-width: 700px) {
  .project-card-wrapper {
    top: 30%;
  }

  .inner-page nav img {
    padding-top: 0;
  }

  .back-artworks-link {
    top: 1em;
    right: 1em;
    padding: 0;
    background-color: transparent;
  }

  .click-view-note {
    font-size: calc(var(--base-font-size) * 0.8);
    transition: 0.3s;
  }

  .click-view-note:hover {
    border-bottom: 0.2em solid #ffec51;
  }

  .hero ul.artist-list {
    display: block;
    padding-left: 0px;
  }

  nav {
    position: relative;
  }

  .hero img {
    margin-top: 7em;
  }

  .hero nav ul li,
  .hero ul.artist-list li {
    display: inline-block;
  }

  .hero ul.artist-list li::before {
    content: "\22F1";
    margin-right: 0.3em;
    color: #ffec51;
  }

  ul.artist-list {
    text-align: center;
  }

  .hero nav ul li:not(:last-child) {
    margin-right: 2em;
  }

  .hero img {
    width: 70vw;
    padding-left: 1.3vw;
  }

  .project-main,
  .project-main-full {
    padding-top: 2em;
  }

  .project-intro,
  .project-description,
  .bio,
  .project-main {
    max-width: 50vw;
  }

  .project-main-full .project-intro,
  .project-main-full .project-description,
  .project-main-full .bio {
    max-width: 50vw;

  }

  .project-main-display>* {
    max-width: 50vw;
  }

  .project-main-display>noscript>* {
    max-width: 50vw;
  }

  .project-main-display .lightbox-thumb img {
    max-width: 50vw;
  }

  .thin-display {
    width: 100vw;
    margin: 0 auto;
  }

  .thin-display>* {
    max-width: 50vw;
  }

  section.project-card-section:not(:first-child) {
    margin-top: -60vh;
  }

  .inner-page nav {
    justify-content: space-between;
    flex-direction: row;
  }

  .inner-page nav a img {
    max-width: 30vw;
  }

  /* .cooling-off-grid {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 0.5em;
  } */

  .narcissus {
    max-width: 100vw;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 1em;
    padding: 2em 0;
    background-color: black;
  }

  .caption {
    margin-right: 0;
  }

  .surface-tension-eye {
    max-width: 80%;
  }

}

.narcissus img {
  max-width: 100%;
}

.narcissus-caption {
  margin-right: 2em;
}

.surface-tension-eye {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.surface-tension-eye img {
  max-width: 100%;
  margin: 0 auto;

}

.surface-tension-item {
  margin-bottom: 3em;
  display: flex;
  flex-direction: column;
  align-items: center;
}

@media screen and (min-width: 1000px) {

  html {
    font-size: calc(var(--base-font-size) * 0.7);
  }

  /* h1 {
    font-size: calc(var(--base-font-size) * 1.5);
  }
  h2 {
    font-size: calc(var(--base-font-size) * 1);
  }
  h3 {
    font-size: calc(var(--base-font-size) * 0.9);
  } */
  .hero img {
    width: 50vw;
  }

  .project-card {
    width: 55vw;
    height: 45vh;
  }

  .inner-page nav a.logo-link {
    width: 60vw;
  }

  .inner-page nav a img {
    max-width: 16vw;
  }
}

@media screen and (min-width: 2000px) {
  html {
    font-size: calc(1rem+0.3vw);
  }
}

@media screen and (max-width: 700px) {}

